--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <p class="subtext"><a class="project-link" href="https://github.com/RGern">View here</a></p>
             </div>
             <!-- <div class="project-card">
-                <img class="project-image"  src="src/images/project4.jpg" alt="Project One Image" />
+                <img class="project-image"  src="src/images/project4.jpg" alt="Project Four Image" />
                 <h3>Project Four</h3>
                 <p class="subtext">This is my project.</p>
                 <hr/>
